# TUI

./: .gitignore  CMakeLists.txt  README.md  build.sh  lint.sh
CMakeProject3/: CMakeLists.txt  CMakeSettings.json  vcpkg_rf.txt
example/: main.cpp
src/: BatteryPlugin.cpp  ControlPlugin.cpp  ECTSPlugin.hpp  IMUPlugin.cpp  PluginManager.cpp  StatusBar.cpp  Sync.cpp  SystemMonitoringPlugin.cpp  TopicMonitorPlugin.cpp  WaypointPlugin.cpp  ectsTUI.cpp  main.cpp
src/Inc/: BatteryPlugin.hpp  ControlPlugin.hpp  ECTSPlugin.hpp  IMUPlugin.hpp  PluginManager.hpp  Statusbar.hpp  Sync.hpp  SystemMonitoringPlugin.hpp  TopicMonitorPlugin.hpp  WaypointPlugin.hpp  ectsTUI.hpp
template/: TemplatePlugin.cpp  TemplatePlugin.hpp
